<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.view.activities.MenuActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_delete"
        android:title="@string/lbl_delete"
        android:icon="@drawable/ic_delete"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_capture"
        android:title="@string/lbl_capture"
        android:icon="@drawable/ic_menu_camera"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_config"
        android:title="@string/lbl_configuration"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/size_50"
                android:title="@string/lbl_option_size_50"/>
            <item android:id="@+id/size_40"
                android:title="@string/lbl_option_size_40"/>
            <item android:id="@+id/size_30"
                android:title="@string/lbl_option_size_30"/>
            <item android:id="@+id/size_20"
                android:title="@string/lbl_option_size_20"/>
            <item android:id="@+id/action_tracking"
                android:title="@string/lbl_tracking">
                <menu>
                    <item android:id="@+id/option_java"
                        android:title="@string/lbl_option_java"/>
                    <item android:id="@+id/option_native"
                        android:title="@string/lbl_option_native"/>
                </menu>
            </item>
        </menu>

    </item>

</menu>
