<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_capture">
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            app:layout_constraintGuide_percent=".05"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            app:layout_constraintGuide_percent=".95"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_one_guideline"
            app:layout_constraintGuide_percent=".35"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_two_guideline"
            app:layout_constraintGuide_percent=".82"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            app:layout_constraintGuide_percent=".02"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            app:layout_constraintGuide_percent=".98"
            android:orientation="horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_title"
            android:text="@string/lbl_captured"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_two_guideline"
            app:layout_constraintTop_toTopOf="@+id/top_guideline" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ib_add"
            android:src="@drawable/ic_menu_send"
            android:background="@null"
            android:contentDescription="@string/lbl_image"
            app:layout_constraintRight_toLeftOf="@+id/right_guideline"
            app:layout_constraintTop_toTopOf="@+id/tv_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_date"
            android:text="@string/lbl_date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_date"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_date"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_lbl_number_faces"
            android:text="@string/lbl_number_faces"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_number_faces"
            app:layout_constraintTop_toTopOf="@+id/tv_lbl_number_faces"
            app:layout_constraintLeft_toLeftOf="@+id/right_one_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_photos"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            app:layout_constraintRight_toRightOf="@+id/right_guideline"
            app:layout_constraintTop_toBottomOf="@+id/tv_lbl_number_faces"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>