<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/movieCard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    card_view:cardBackgroundColor="@color/colorTransparent"
    card_view:cardCornerRadius="@dimen/card_corner_radius"
    card_view:cardElevation="@dimen/card_elevation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/left_guideline"
            card_view:layout_constraintGuide_percent=".02"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_guideline"
            card_view:layout_constraintGuide_percent=".98"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_one_guideline"
            card_view:layout_constraintGuide_percent=".55"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_two_guideline"
            card_view:layout_constraintGuide_percent=".70"
            android:orientation="vertical"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/right_three_guideline"
            card_view:layout_constraintGuide_percent=".80"
            android:orientation="vertical"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/top_guideline"
            card_view:layout_constraintGuide_percent=".02"
            android:orientation="horizontal"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bottom_guideline"
            card_view:layout_constraintGuide_percent=".98"
            android:orientation="horizontal"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/iv_photo"
            android:src="@drawable/person_logo"
            android:contentDescription="@string/lbl_image"
            card_view:layout_constraintDimensionRatio="H,7:10"
            card_view:layout_constraintLeft_toLeftOf="@+id/left_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintTop_toTopOf="@+id/top_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:text="@string/lbl_name"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_lbl_name"
            card_view:layout_constraintTop_toTopOf="@+id/iv_photo"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_name"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_lbl_name"/>

        <TextView
            android:id="@+id/tv_lbl_document"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:text="@string/lbl_document"
            android:textStyle="bold"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_document"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_lbl_document"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:text="@string/lbl_latitude"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_lbl_latitude"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_document"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_latitude"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_lbl_latitude"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:text="@string/lbl_longitude"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_lbl_longitude"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_latitude"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_longitude"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_lbl_longitude"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:text="@string/lbl_date"
            android:textStyle="bold"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_lbl_date"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_longitude"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_photo"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:id="@+id/tv_date"
            card_view:layout_constraintLeft_toRightOf="@+id/right_one_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_lbl_date"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/iv_success"
            android:src="@drawable/ic_unknow"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/lbl_image"
            card_view:layout_constraintLeft_toLeftOf="@+id/right_two_guideline"
            card_view:layout_constraintRight_toRightOf="@+id/right_three_guideline"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_date"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
